(fix) Pre-build version of enc for erlang 23 support

--- a/rebar.config
+++ b/rebar.config
@@ -18,5 +18,9 @@
     verbose
 ]}.
 
+%% IMPORTANT - this project uses a pre-compliled 'enc'
+%% from repo erlang-native-compiler to bootstrap the build
+%% Since things changed quite a bit with 23, there is a different
+%% version which needs to be linked to name 'enc'
 {pre_hooks, [{"", compile, "escript enc compile"}]}.
 {post_hooks, [{"", clean, "escript enc clean"}]}.
