--- a/rebar.config
+++ b/rebar.config
@@ -1,26 +1,10 @@
-{port_specs, [
-    {"priv/erlfdb_nif.so", ["c_src/*.c"]}
-]}.
-
-{plugins, [rebar_gdb_plugin]}.
-
-{port_env, [
-    {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
-        "CFLAGS", "$CFLAGS -Ic_src/ -g -Wall -Werror"},
-    {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
-        "CXXFLAGS", "$CXXFLAGS -Ic_src/ -g -Wall -Werror"},
-
-    {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
-        "LDFLAGS", "$LDFLAGS -lfdb_c"}
-]}.
-
 {eunit_opts, [
     verbose
 ]}.
 
-%% IMPORTANT - this project uses a pre-compliled 'enc'
-%% from repo erlang-native-compiler to bootstrap the build
-%% Since things changed quite a bit with 23, there is a different
-%% version which needs to be linked to name 'enc'
-{pre_hooks, [{"", compile, "escript enc compile"}]}.
-{post_hooks, [{"", clean, "escript enc clean"}]}.
+{pre_hooks,
+  [{"(linux|darwin|solaris)", compile, "make -C c_src"},
+   {"(freebsd)", compile, "gmake -C c_src"}]}.
+{post_hooks,
+  [{"(linux|darwin|solaris)", clean, "make -C c_src clean"},
+   {"(freebsd)", clean, "gmake -C c_src clean"}]}.
